# AquaCulture_FishBase

./: main.py  pipeline.py  pyproject.toml
EDA/: fishbase_data_eda_2.ipynb  fishbase_down.py  fishbase_eda.ipynb
EDA/eda_outputs/: fishbase_table_inventory.csv
aquaculture_data_pipeline/: run_stage_A.sh
aquaculture_data_pipeline/scripts/: list_bio_oracle_layers.R  update_catalog.py  validate_stage_A.py
data_fb_ai_bio/: code_generation.ipynb  feature_store.parquet
draft/: FishBase_AI_Biology_Pipeline_HF.ipynb  FishBase_AI_Biology_Pipeline_HF_patched.ipynb
services/bio-oracle-data/: pyproject.toml
services/bio-oracle-data/src/bio_oracle_data/: __init__.py  test_data.py
