[project]
name = "aquaculture-fishbase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "datasets>=4.0.0",
    "duckdb>=1.3.2",
    "geopandas>=1.1.1",
    "hf-xet>=1.1.9",
    "lightgbm>=4.6.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.33.0",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.7.1",
    "xarray>=2025.9.0",
]
